--- a/sem09-etudiant/semaine09/index.html
+++ b/sem09-etudiant/semaine09/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="css/normalize.css">
 
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+
     <link rel="stylesheet" href="css/styles.css">
 
 
