--- a/sem09-etudiant/semaine09/index.html
+++ b/sem09-etudiant/semaine09/index.html
@@ -8,6 +8,9 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 
+    <script src="js/splittext.js" defer></script>
+    <script src="js/scripts.js" defer></script>
+
     <link rel="stylesheet" href="css/styles.css">
 
 
