--- a/sem09-etudiant/semaine09/page1.html
+++ b/sem09-etudiant/semaine09/page1.html
@@ -6,6 +6,9 @@
 
     <link rel="stylesheet" href="css/normalize.css">
 
+    <script src="js/splittext.js" defer></script>
+    <script src="js/scripts.js" defer></script>
+
     <link rel="stylesheet" href="css/styles.css">
 
 
